--- a/views/about.html
+++ b/views/about.html
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="../styles/about.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="nav-container">
-            <div class="logo">
+    <header>
+        <nav class="navbar">
+            <!-- <div class="logo">
                 <img src="../assets/logo.png" alt="Logo Sholat Guide">
-            </div>
+            </div> -->
             <ul class="nav-links">
                 <li><a href="../index.html">Beranda</a></li>
-                <li><a href="wudhu-guide.html">Panduan Wudhu</a></li>
-                <li><a href="shalat-guide.html">Panduan Shalat</a></li>
+                <li><a href="wudhu-guide.html">Wudhu</a></li>
+                <li><a href="shalat-guide.html">Shalat</a></li>
                 <li><a href="about.html" class="active">Tentang</a></li>
             </ul>
 
-            <div class="hamburger">
+            <!-- <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
-            </div>
+            </div> -->
         </nav>
     </header>
     
