--- a/views/shalat-guide.html
+++ b/views/shalat-guide.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="../styles/shalat.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="nav-container">
-            <div class="logo">
+    <header>
+        <nav class="navbar">
+            <!-- <div class="logo">
                 <img src="../assets/logo.png" alt="Logo Al-Masbah">
-            </div>
+            </div> -->
             <ul class="nav-links">
                 <li><a href="../index.html">Beranda</a></li>
-                <li><a href="wudhu-guide.html">Panduan Wudhu</a></li>
-                <li><a href="shalat-guide.html" class="active">Panduan Shalat</a></li>
+                <li><a href="wudhu-guide.html">Wudhu</a></li>
+                <li><a href="shalat-guide.html" class="active">Shalat</a></li>
                 <li><a href="about.html">Tentang</a></li>
             </ul>
         </nav>
