--- a/views/wudhu-guide.html
+++ b/views/wudhu-guide.html
@@ -14,20 +14,20 @@
     <!-- Header sama seperti index.html -->
     <header>
         <nav class="navbar">
-            <div class="logo">
+            <!-- <div class="logo">
                 <img src="../assets/logo.png" alt="Logo Al-Masbah" id="logo">
-            </div>
+            </div> -->
             <ul class="nav-links">
                 <li><a href="../index.html">Beranda</a></li>
-                <li><a href="wudhu-guide.html" class="active">Panduan Wudhu</a></li>
-                <li><a href="shalat-guide.html">Panduan Shalat</a></li>
+                <li><a href="wudhu-guide.html" class="active">Wudhu</a></li>
+                <li><a href="shalat-guide.html">Shalat</a></li>
                 <li><a href="about.html">Tentang</a></li>
             </ul>
-            <div class="hamburger">
+            <!-- <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
-            </div>
+            </div> -->
         </nav>
     </header>
 
