--- a/styles/shalat.css
+++ b/styles/shalat.css
@@ -1,9 +1,16 @@
 /* Styles khusus untuk halaman panduan shalat */
+.main-content .page-title {
+    margin-top: 4rem;
+}
+
+
+
 .shalat-intro {
-    padding: 2rem;
+    padding: 1rem;
     background-color: #f5f5f5;
     border-radius: 8px;
     margin: 2rem 0;
+
 }
 
 .preparation-list {
@@ -135,6 +142,11 @@
     .doa-box .arab {
         font-size: 1.2rem;
     }
+
+
+    /* .main-content .page-title {
+        margin-top: 3rem;
+    } */
 }
 
 /* Animations */
