--- a/styles/about.css
+++ b/styles/about.css
@@ -6,28 +6,28 @@
 }
 
 /* Styling untuk navbar */
-.navbar {
+/* .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
     background-color: #333;
     color: white;
-}
+} */
 
 .logo img {
     height: 40px;
 }
 
 /* Styling untuk link navigasi */
-.nav-links {
+/* .nav-links {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
-}
+} */
 
 /* Navbar Styles */
 /* .navbar {
@@ -68,7 +68,7 @@
 
 /* Hero Section */
 .hero-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    background: linear-gradient(rgba(44, 62, 80, 0.9), rgba(44, 62, 80, 0.9)),
                 url('../assets/mosque-bg.jpg');
     background-size: cover;
     background-position: center;
