Update social media

--- a/views/about.html
+++ b/views/about.html
@@ -90,8 +90,8 @@
                         <h3>Fata Zikrillah</h3>
                         <p>Lead Developer</p>
                         <div class="social-links">
-                            <a href="https://github.com/ahmadjunaedi" target="_blank" rel="noopener noreferrer">GitHub</a>
-                            <a href="https://linkedin.com/in/ahmadjunaedi" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                            <a href="https://www.instagram.com/fata.zkrilllah/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                            <a href="https://linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                         </div>
                     </div>
                 </div>
@@ -101,9 +101,9 @@
                 <h2>Hubungi Kami</h2>
                 <div class="contact-content">
                     <div class="contact-info">
-                        <p>Email: info@sholatguide.com</p>
-                        <p>Telepon: +62 123 4567 890</p>
-                        <p>Alamat: Jl. Contoh No. 123, Kota, Indonesia</p>
+                        <p>Email: Al-Masbah@gmail.com</p>
+                        <p>Telepon: +62 823 4567 890</p>
+<!--                         <p>Alamat: Jl. Contoh No. 123, Kota, Indonesia</p> -->
                     </div>
                     <form class="contact-form">
                         <div class="form-group">
