--- a/views/about.html
+++ b/views/about.html
@@ -90,7 +90,7 @@
                         <h3>Fata Zikrillah</h3>
                         <p>Lead Developer</p>
                         <div class="social-links">
-                            <a href="https://www.instagram.com/fata.zkrilllah/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                            <a href="https://www.instagram.com/fata.zkrilllah/" target="_blank" rel="noopener noreferrer">Instagram</a>
                             <a href="https://linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                         </div>
                     </div>
