Update social media v2

--- a/views/about.html
+++ b/views/about.html
@@ -86,7 +86,7 @@
                 <h2>Tim Pengembang</h2>
                 <div class="team-grid">
                     <div class="team-card">
-                        <img src="../assets/team/developer.png" alt="Developer" class="team-photo">
+<!--                         <img src="../assets/team/developer.png" alt="Developer" class="team-photo"> -->
                         <h3>Fata Zikrillah</h3>
                         <p>Lead Developer</p>
                         <div class="social-links">
